syntax = "proto3";

option go_package = "github.com/Noerklit/DisysAuctionSystem/proto";

package proto;

service AuctionSystem{
    rpc Bid (Amount) returns (Ack) {}
    rpc Result (Void) returns (Outcome) {}
}

message Amount {
    string bidderName = 1;
    int64 amount = 2;
}

message Outcome {
    bool status = 1;
    int64 highestBid = 2; 
    string highestBidder = 3;
}

message Ack {
    string message = 1;
}

message Void {}